Tested all of the functions in the scrape python file

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -25871,11 +25871,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T04:45:07.767570Z",
-     "start_time": "2020-04-14T04:44:51.507793Z"
+     "end_time": "2020-04-14T05:54:11.443155Z",
+     "start_time": "2020-04-14T05:54:05.565102Z"
     }
    },
    "outputs": [],
@@ -25889,27 +25889,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T04:45:17.523014Z",
-     "start_time": "2020-04-14T04:45:08.750813Z"
+     "end_time": "2020-04-14T05:54:22.332399Z",
+     "start_time": "2020-04-14T05:54:13.546018Z"
     }
    },
    "outputs": [],
    "source": [
     "url = 'https://space-facts.com/mars/'\n",
+    "# response_facts = requests.get(url)\n",
     "browser.visit(url)\n",
     "html = browser.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T04:45:18.827373Z",
-     "start_time": "2020-04-14T04:45:18.539536Z"
+     "end_time": "2020-04-14T05:54:24.017966Z",
+     "start_time": "2020-04-14T05:54:23.892038Z"
     }
    },
    "outputs": [
@@ -25996,13 +25997,13 @@
        "Recorded By:                   Egyptian astronomers"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup = bs(html, 'html5lib')\n",
+    "soup = bs(html, 'html.parser')\n",
     "table_html = soup.find_all('table')\n",
     "# print(table_html)\n",
     "mars_facts = pd.read_html(html)[2]\n",
